[project]
name = "mlx_cluster"
version = "0.0.4"
authors = [
  { name = "Vinay Pandya", email = "vinayharshadpandya27@gmail.com" },
]
description = "C++ and Metal extensions for MLX CTC Loss"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = []
test = [
  "mlx_graphs==0.0.7",
  "torch==2.2.0",
  "mlx>=0.17.0",
  "pytest==7.4.4",
  "scipy==1.12.0",
]
[project.urls]
Homepage = "https://github.com/vinayhpandya/mlx_cluster"
Issues = "https://github.com/vinayhpandya/mlx_cluster/Issues"


[build-system]
requires = [
  "setuptools>=42",
  "cmake>=3.24",
  "mlx==0.18.0",
  "nanobind@git+https://github.com/wjakob/nanobind.git@2f04eac452a6d9142dedb957701bdb20125561e4",
]


build-backend = "setuptools.build_meta"
